# tello-slam-and-recognition

./: README.md
scripts/: build_all.sh  build_object_detection.sh  build_tello.sh  build_webcam.sh  install_dependencies.sh  run.sh
workspace/src/: launch.py  rviz.rviz
workspace/src/object_detection/: package.xml  setup.py
workspace/src/object_detection/object_detection/: object_detection.py
workspace/src/tello/tello/: node.py
workspace/src/tello_msg/: CMakeLists.txt
workspace/src/tello_msg/msg/: ObjectDetectionBox.msg
workspace/src/test_package/: package.xml  setup.py
workspace/src/test_package/test_package/: test_image_display_node.py  test_image_publisher.py
workspace/src/webcam_node/: CMakeLists.txt  package.xml
workspace/src/webcam_node/src/: webcam_node.cpp
